<resources>
    <string name="app_name">Friendle</string>
    <string name="game_title_placeholder">Placeholder\'s Game</string>
    <string name="home_create_game">Create Game</string>
    <string name="home_play_with_code">Play with Code</string>
    <string name="home_random_word">Random Word</string>
    <string name="home_stats">Stats</string>
    <string name="home_title_image">Title Image</string>
    <string name="share">Share</string>

    <string name="key_q">Q</string>
    <string name="key_w">W</string>
    <string name="key_e">E</string>
    <string name="key_r">R</string>
    <string name="key_t">T</string>
    <string name="key_y">Y</string>
    <string name="key_u">U</string>
    <string name="key_i">I</string>
    <string name="key_o">O</string>
    <string name="key_p">P</string>
    <string name="key_a">A</string>
    <string name="key_s">S</string>
    <string name="key_d">D</string>
    <string name="key_f">F</string>
    <string name="key_g">G</string>
    <string name="key_h">H</string>
    <string name="key_j">J</string>
    <string name="key_k">K</string>
    <string name="key_l">L</string>
    <string name="key_back">⌫</string>
    <string name="key_z">Z</string>
    <string name="key_x">X</string>
    <string name="key_c">C</string>
    <string name="key_v">V</string>
    <string name="key_b">B</string>
    <string name="key_n">N</string>
    <string name="key_m">M</string>
    <string name="key_enter">ENTER</string>
    <string name="wordle_with_friends">Friendle</string>
    <string name="game_code">Game Code</string>
</resources>