<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/create_game_controls_bar"
        android:name="com.walagran.wwf.ui.common.ControlsBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/home_bottom_bar"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginVertical="64dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wordle_with_friends"
            android:textColor="@color/orange"
            android:textSize="64sp"
            android:layout_marginBottom="96dp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="Game Code"
            android:inputType="textCapCharacters"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:cursorVisible="false"
            android:gravity="center"
            android:textSize="32sp"
            android:background="@drawable/custom_edit_text"
            android:textColor="@color/background"
            android:id="@+id/game_code"
            tools:ignore="LabelFor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_game"
            style="@style/Widget.Material3.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_play_with_code"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_game"
            style="@style/Widget.Material3.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_create_game"
            android:layout_marginVertical="64dp"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>